// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanning tests default renderer 1`] = `
<div
  className="Scanning"
>
  <ForwardRef(WithStyles(FullScreenDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Scanning"
        id="cboard.components.Settings.Scanning.scanning"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles(ForwardRef(Paper)))>
      <ForwardRef(WithStyles(ForwardRef(List)))>
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable"
                id="cboard.components.Settings.Scanning.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Start scanning boards immediately"
                id="cboard.components.Settings.Scanning.enableSecondary"
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Time delay"
                id="cboard.components.Settings.Scanning.delay"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Time between two consecutive scanning highlights"
                id="cboard.components.Settings.Scanning.delaySecondary"
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Select)))
              inputProps={
                Object {
                  "id": "scanning-delay",
                  "name": "delay",
                }
              }
              onChange={[Function]}
              value="2 seconds"
            >
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value={750}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 0.75,
                    }
                  }
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value={1000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 1,
                    }
                  }
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value={2000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 2,
                    }
                  }
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value={3000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 3,
                    }
                  }
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value={5000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 5,
                    }
                  }
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
            </ForwardRef(WithStyles(ForwardRef(Select)))>
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Scan method"
                id="cboard.components.Settings.Scanning.method"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Method to be used for board exploration"
                id="cboard.components.Settings.Scanning.methodSecondary"
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Select)))
              inputProps={
                Object {
                  "id": "scanning-strategy",
                  "name": "strategy",
                }
              }
              onChange={[Function]}
              value="automatic"
            >
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value="automatic"
              >
                <FormattedMessage
                  defaultMessage="Automatic"
                  id="cboard.components.Settings.Scanning.automatic"
                  values={Object {}}
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
              <ForwardRef(WithStyles(ForwardRef(MenuItem)))
                value="manual"
              >
                <FormattedMessage
                  defaultMessage="Manual"
                  id="cboard.components.Settings.Scanning.manual"
                  values={Object {}}
                />
              </ForwardRef(WithStyles(ForwardRef(MenuItem)))>
            </ForwardRef(WithStyles(ForwardRef(Select)))>
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
      </ForwardRef(WithStyles(ForwardRef(List)))>
      <div
        className="Scanning__HelpText"
      >
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
      </div>
    </ForwardRef(WithStyles(ForwardRef(Paper)))>
  </ForwardRef(WithStyles(FullScreenDialog))>
</div>
`;

exports[`Scanning tests options behavior 1`] = `
<div
  className="Scanning"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Scanning"
        id="cboard.components.Settings.Scanning.scanning"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable"
                id="cboard.components.Settings.Scanning.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Start scanning boards immediately"
                id="cboard.components.Settings.Scanning.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Time delay"
                id="cboard.components.Settings.Scanning.delay"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Time between two consecutive scanning highlights"
                id="cboard.components.Settings.Scanning.delaySecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Select))
              inputProps={
                Object {
                  "id": "scanning-delay",
                  "name": "delay",
                }
              }
              onChange={[Function]}
              value="2 seconds"
            >
              <WithStyles(ForwardRef(MenuItem))
                key="0"
                value={750}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 0.75,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="1"
                value={1000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 1,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="2"
                value={2000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 2,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="3"
                value={3000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 3,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="4"
                value={5000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 5,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Scan method"
                id="cboard.components.Settings.Scanning.method"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Method to be used for board exploration"
                id="cboard.components.Settings.Scanning.methodSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Select))
              inputProps={
                Object {
                  "id": "scanning-strategy",
                  "name": "strategy",
                }
              }
              onChange={[Function]}
              value="automatic"
            >
              <WithStyles(ForwardRef(MenuItem))
                value="automatic"
              >
                <FormattedMessage
                  defaultMessage="Automatic"
                  id="cboard.components.Settings.Scanning.automatic"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="manual"
              >
                <FormattedMessage
                  defaultMessage="Manual"
                  id="cboard.components.Settings.Scanning.manual"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
      <div
        className="Scanning__HelpText"
      >
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
      </div>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Scanning tests options behavior 2`] = `
<div
  className="Scanning"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Scanning"
        id="cboard.components.Settings.Scanning.scanning"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable"
                id="cboard.components.Settings.Scanning.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Start scanning boards immediately"
                id="cboard.components.Settings.Scanning.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Time delay"
                id="cboard.components.Settings.Scanning.delay"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Time between two consecutive scanning highlights"
                id="cboard.components.Settings.Scanning.delaySecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Select))
              inputProps={
                Object {
                  "id": "scanning-delay",
                  "name": "delay",
                }
              }
              onChange={[Function]}
              value="2 seconds"
            >
              <WithStyles(ForwardRef(MenuItem))
                key="0"
                value={750}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 0.75,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="1"
                value={1000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 1,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="2"
                value={2000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 2,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="3"
                value={3000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 3,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                key="4"
                value={5000}
              >
                <FormattedMessage
                  defaultMessage="{value} seconds"
                  id="cboard.components.Settings.Scanning.seconds"
                  values={
                    Object {
                      "value": 5,
                    }
                  }
                />
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Scanning__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Scan method"
                id="cboard.components.Settings.Scanning.method"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Method to be used for board exploration"
                id="cboard.components.Settings.Scanning.methodSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Select))
              inputProps={
                Object {
                  "id": "scanning-strategy",
                  "name": "strategy",
                }
              }
              onChange={[Function]}
              value="automatic"
            >
              <WithStyles(ForwardRef(MenuItem))
                value="automatic"
              >
                <FormattedMessage
                  defaultMessage="Automatic"
                  id="cboard.components.Settings.Scanning.automatic"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(MenuItem))>
              <WithStyles(ForwardRef(MenuItem))
                value="manual"
              >
                <FormattedMessage
                  defaultMessage="Manual"
                  id="cboard.components.Settings.Scanning.manual"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(MenuItem))>
            </WithStyles(ForwardRef(Select))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
      <div
        className="Scanning__HelpText"
      >
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
        <div>
          <FormattedMessage
            values={Object {}}
          />
        </div>
      </div>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
